refactor: update DebugController with RESTful annotations and improve code clarity